[B]Retrospect v5.0.6 - Changelog - 2019-10-02[/B]

Just a minor update with some fixes for some channels.

[B]Framework related[/B]
-

[B]GUI/Settings/Language related[/B]
-

[B]Channel related[/B]
* Added: Viafree's MTV and National Geographic channels (Fixes #1229)