@@ -10,3 +10,4 @@ Just a minor update with some fixes for some channels.
 
 [B]Channel related[/B]
 * Added: Viafree's MTV and National Geographic channels (Fixes #1229)
+* Fixed: Kanal 9 and Kanal 11 fanart
